--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "d3": "^7.8.4",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "leaflet": "^1.9.3",
+    "leaflet-pixi-overlay": "^1.9.4",
     "next": "13.3.0",
+    "pixi.js": "^4.8.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
