--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
     "d3": "^7.8.4",
+    "d3-geo": "^3.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "leaflet": "^1.9.3",
